--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.1"
   },
