--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "install": "^0.8.1",
     "mysql": "^2.11.1",
+    "npm": "^3.10.7",
+    "passport": "^0.3.2",
+    "passport-paypal-openidconnect": "^0.1.1",
+    "request": "^2.74.0",
     "sequelize": "^3.24.1"
   },
   "devDependencies": {
