--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^3.10.7",
     "passport": "^0.3.2",
     "passport-paypal-openidconnect": "^0.1.1",
+    "paypal-rest-sdk": "^1.6.9",
     "request": "^2.74.0",
     "sequelize": "^3.24.1"
   },
