--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
+    "node-sass": "^3.10.0",
     "susy": "^2.2.12"
   }
 }
