--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "geoip-lite": "^1.1.8",
     "install": "^0.8.1",
     "mysql": "^2.11.1",
     "npm": "^3.10.7",
